--- a/css/app.css
+++ b/css/app.css
@@ -1,21 +1,70 @@
 @import url(http://fonts.googleapis.com/css?family=Lato:300,400,700);
 body {
-  font-weight: 300;
-  font-family: 'Lato', Calibri, Arial, sans-serif;
+  /*font-weight: 300;
+  font-family: 'Lato', Calibri, Arial, sans-serif;*/
   padding-top: 70px;
 }
 
+/* Common */
 .thin-font{
   font-weight: 300;
   font-family: 'Lato', Calibri, Arial, sans-serif;
 }
-
-.jumbotron {
-  text-align: center;
-  position: absolute;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  top: 0;
+.block-hide{
+  display: none;
 }
 
+/* Start zone */
+.start-zone{
+  padding: 100px;
+}
+.start-zone p{
+  font-size: 24px;
+  margin-top: 20px;
+  margin-bottom: 10px;
+}
+.browse_files{
+  text-decoration: underline;
+}
+
+/* Preview zone */
+.preview-zone{
+  margin: 50px auto;
+}
+.preview-zone img{
+  max-width: 1140px;
+  max-height: 800px;
+}
+
+/* Thumbnail zone */
+.thumbnail-zone{
+  margin-bottom: 30px;
+}
+.thumbnails-holder .upload-thumbnail{
+  display: block;
+  float: left;
+  margin: 10px 10px 10px 0;
+  padding-bottom: 10px;
+}
+.upload-thumbnail.active{
+  border-bottom: 2px solid #428bca;
+}
+.thumbnail-zone .actions{
+  margin-top: 20px;
+}
+
+/* Edit zone */
+.label-main{
+  font-size: 14px;
+  font-weight: bold;
+  color: #428bca;
+}
+.photo-title{
+  font-size: 22px;
+  font-weight: bold;
+}
+.instant-edit{
+  border: none;
+  background: none;
+  box-shadow: none;
+}
