--- a/css/app.css
+++ b/css/app.css
@@ -1,4 +1,4 @@
-@import url(http://fonts.googleapis.com/css?family=Lato:300,400,700);
+/*@import url(http://fonts.googleapis.com/css?family=Lato:300,400,700);*/
 body {
   /*font-weight: 300;
   font-family: 'Lato', Calibri, Arial, sans-serif;*/
@@ -13,6 +13,7 @@ body {
 .block-hide{
   display: none;
 }
+textarea{resize: none}
 
 /* Start zone */
 .start-zone{
@@ -43,17 +44,33 @@ body {
 .thumbnails-holder .upload-thumbnail{
   display: block;
   float: left;
+}
+.thumbnails-holder .active{
+  border-bottom: 2px solid #428bca;
+  padding-bottom: 10px;
+}
+.thumbnail-zone .nav>li{
   margin: 10px 10px 10px 0;
   padding-bottom: 10px;
 }
-.upload-thumbnail.active{
-  border-bottom: 2px solid #428bca;
+.thumbnail-zone .nav>li>a, .thumbnail-zone .nav>li>a:hover{
+  padding: 0;
+  border: none;
+  margin-right: 0;
 }
 .thumbnail-zone .actions{
   margin-top: 20px;
 }
+.thumbnail-zone .nav-tabs{
+  border: none;
+}
 
 /* Edit zone */
+.container-fluid{
+  width: 100%;
+  background: #f7f8fa;
+  padding: 20px 0 50px;
+}
 .label-main{
   font-size: 14px;
   font-weight: bold;
@@ -67,4 +84,11 @@ body {
   border: none;
   background: none;
   box-shadow: none;
+}
+.instant-edit:focus{
+  border: 1px solid #66afe9;
+  background: #fff;
+}
+.exif{
+  font-size: 12px;
 }
