--- a/css/app.css
+++ b/css/app.css
@@ -1,128 +1,138 @@
 /*@import url(http://fonts.googleapis.com/css?family=Lato:300,400,700);*/
 body {
-  /*font-weight: 300;
-  font-family: 'Lato', Calibri, Arial, sans-serif;*/
-  padding-top: 70px;
+	/*font-weight: 300;
+	font-family: 'Lato', Calibri, Arial, sans-serif;*/
+	padding-top: 70px;
 }
 
 /* Common */
 .thin-font{
-  font-weight: 300;
-  font-family: 'Lato', Calibri, Arial, sans-serif;
+	font-weight: 300;
+	font-family: 'Lato', Calibri, Arial, sans-serif;
 }
 .block-hide{
-  display: none!important;
+	display: none!important;
 }
 textarea{resize: none}
 
 /* Start zone */
 .start-zone{
-  padding: 100px;
+	padding: 100px;
 }
 .start-zone p{
-  font-size: 24px;
-  margin-top: 20px;
-  margin-bottom: 10px;
+	font-size: 24px;
+	margin-top: 20px;
+	margin-bottom: 10px;
 }
 .browse_files{
-  text-decoration: underline;
+	text-decoration: underline;
 }
 .navbar-brand{
-  color: #fff !important;
+	color: #fff !important;
 }
 
 /* Preview zone */
 .preview-zone{
-  margin: 50px auto;
+	margin: 50px auto;
 }
 .preview-zone img{
-  height: 740px;
-  display: block;
-  margin: 0 auto;
+	height: 740px;
+	display: block;
+	margin: 0 auto;
 }
 
 /* Thumbnail zone */
 .thumbnail-zone{
-  margin-bottom: 30px;
+	margin-bottom: 30px;
 }
 .thumbnails-holder .upload-thumbnail{
-  display: block;
-  float: left;
-  height: 64px;
-  width: 64px;
-  overflow: hidden;
-  border-radius: 0!important;
+	display: block;
+	float: left;
+	height: 64px;
+	width: 64px;
+	overflow: hidden;
+	border-radius: 0!important;
 }
 .upload-thumbnail .glyphicon-ok-sign{
-  color: #5CB85C;
-  position: absolute;
-  right: 0px;
-  top: 0px;
-  background: #fff;
-  display: none;
+	color: #5CB85C;
+	position: absolute;
+	right: 0px;
+	top: 0px;
+	background: #fff;
+	display: none;
+	border-radius: 50%;
 }
 .upload-thumbnail.ready .glyphicon-ok-sign{
-  display: block;
+	display: block;
 }
 .thumbnails-holder .active{
-  border-bottom: 2px solid #428bca;
-  padding-bottom: 10px;
+	border-bottom: 2px solid #428bca;
+	padding-bottom: 10px;
 }
 .thumbnail-zone .nav>li{
-  margin: 10px 10px 10px 0;
-  padding-bottom: 10px;
+	margin: 10px 10px 10px 0;
+	padding-bottom: 10px;
 }
 .thumbnail-zone .nav>li>a, .thumbnail-zone .nav>li>a:hover{
-  padding: 0;
-  border: none;
-  margin-right: 0;
+	padding: 0;
+	border: none;
+	margin-right: 0;
 }
 .thumbnail-zone .actions{
-  margin-top: 20px;
+	margin-top: 20px;
 }
 .thumbnail-zone .nav-tabs{
-  border: none;
+	border: none;
 }
 
 /* Edit zone */
 .container-fluid{
-  width: 100%;
-  background: #f7f8fa;
-  padding: 20px 0 50px;
+	width: 100%;
+	background: #f7f8fa;
+	padding: 20px 0 50px;
 }
 .label-main{
-  font-size: 14px;
-  font-weight: bold;
-  color: #428bca;
+	font-size: 14px;
+	font-weight: bold;
+	color: #428bca;
 }
 .photo-title{
-  font-size: 26px;
-  font-weight: bold;
-  margin-left: -5px;
-  padding-left: 5px
+	font-size: 26px;
+	font-weight: bold;
+	margin-left: -5px;
+	padding-left: 5px
 }
 .instant-edit{
-  border: none;
-  background: none;
-  box-shadow: none;
+	border: none;
+	background: none;
+	box-shadow: none;
 }
 .instant-edit:focus{
-  border: 1px solid #66afe9;
-  background: #fff;
+	border: 1px solid #66afe9;
+	background: #fff;
 }
 .exif{
-  font-size: 12px;
+	font-size: 12px;
 }
 .edit-zone .map-canvas{
-  width: 360px;
-  height: 240px;
+	width: 360px;
+	height: 240px;
 }
 .map {
-  position: relative;
+	position: relative;
+}
+.map.disabled:before{
+	content: '';
+	z-index: 999;
+	position: absolute;
+	left: 0;
+	top: 0;
+	bottom: 0;
+	right: 0;
 }
 .map-search{
-  position: absolute;
-  top: 5px;
-  right: 5px;
-  width: 300px;
+	position: absolute;
+	top: 5px;
+	right: 5px;
+	width: 300px;
 }
