--- a/css/app.css
+++ b/css/app.css
@@ -36,7 +36,7 @@ textarea{resize: none}
 	margin: 50px auto;
 }
 .preview-zone img{
-	height: 740px;
+	height: 500px;
 	display: block;
 	margin: 0 auto;
 }
@@ -114,10 +114,43 @@ textarea{resize: none}
 .exif{
 	font-size: 12px;
 }
+.exif .row label{
+	margin-top: 5px;
+}
+.exif .glyphicon{
+	padding-top: 6px;
+}
 .edit-zone .map-canvas{
 	width: 360px;
 	height: 240px;
 }
+textarea[name="photo[description]"] {
+	margin-bottom: 56px;
+}
+
+/* custom style for Select2 */
+.select2-choices {
+  background: none !important;
+  border: none !important;
+  box-shadow: none!important;
+  width: 340px;
+  margin: -3px 0 0 -10px!important;
+}
+.select2-drop-active{
+	border: none; 
+	border-radius: 0
+}
+.select2-search-field input{
+	margin: 0;
+	padding-top: 3px!important ;
+}
+/* End of custom style for Select2 */
+
+/* Custom style for Timepicker */
+.ui-timepicker-list .ui-timepicker-selected:hover {
+	background: #478BCA;
+}
+
 .map {
 	position: relative;
 }
