--- a/css/app.css
+++ b/css/app.css
@@ -27,7 +27,7 @@ textarea{resize: none}
 .browse_files{
 	text-decoration: underline;
 }
-.navbar-brand{
+.highlight{
 	color: #fff !important;
 }
 
