--- a/css/app.css
+++ b/css/app.css
@@ -186,3 +186,11 @@ textarea[name="photo[description]"] {
 	font-size: 24px;
 }
 /* End of Progress bar */
+
+.panel-body img {
+	max-width: 100%;
+}
+.panel-footer {
+	overflow: hidden;
+	text-overflow: ellipsis;
+}
