--- a/css/app.css
+++ b/css/app.css
@@ -121,7 +121,7 @@ textarea{resize: none}
 	padding-top: 6px;
 }
 .edit-zone .map-canvas{
-	width: 360px;
+	/*width: 360px;*/
 	height: 240px;
 }
 textarea[name="photo[description]"] {
@@ -133,7 +133,7 @@ textarea[name="photo[description]"] {
 	background: none !important;
 	border: none !important;
 	box-shadow: none!important;
-	width: 340px;
+	/*width: 340px;*/
 	margin: -3px 0 0 -10px!important;
 }
 .select2-drop-active{
@@ -168,7 +168,7 @@ textarea[name="photo[description]"] {
 	position: absolute;
 	top: 5px;
 	right: 5px;
-	width: 300px;
+	width: 70%;
 }
 /* End of Map */
 
