--- a/demo/css/app.css
+++ b/demo/css/app.css
@@ -194,3 +194,21 @@ textarea[name="photo[description]"] {
 	overflow: hidden;
 	text-overflow: ellipsis;
 }
+
+/* Snap.js */
+.snap-content{
+	background:#fff;
+	-webkit-box-shadow:0px 0px 5px 1px #777;
+	   -moz-box-shadow:0px 0px 5px 1px #777;
+	        box-shadow:0px 0px 5px 1px #777;
+	padding-top: 70px;
+}
+.navbar-toggle{
+	margin:8px 15px;
+}
+.side-menu h3{padding-left: 15px}
+.side-menu a.list-group-item{
+	-webkit-border-radius:0;
+	   -moz-border-radius:0;
+	        border-radius:0;
+}
